--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -54,13 +54,15 @@ section
     max-width: 550px
     .header
         span
-            font-size: 32px
+            font-size: 38px
             color: #fff
     .body
         p
             color: #fff
-            font-size: 18px
+            font-size: 24px
             margin: 10px 0px
+            &.large
+
     &.one
         top: 60%
         left: 8%
@@ -82,4 +84,4 @@ section
         .body
             text-align: center
             p
-                color: #000
+                color: #050505
